--- a/.github/workflows/build-deploy-kubernetes.yaml
+++ b/.github/workflows/build-deploy-kubernetes.yaml
@@ -18,12 +18,13 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v2
     - name: Build, tag, and push image to Amazon ECR
       env:
-        IMAGE_TAG: test
+        IMAGE_TAG: urlretriever
       run: |
         docker build -t ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG -f Dockerfile .
         docker push ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
     - name: Update kube config
-      run: aws eks update-kubeconfig --name ${{secrets.EKS_CLUSTER_NAME}} --region ${{secrets.AWS_REGION}}
+      run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
     - name: Deploy to EKS
       run: |
-        kubectl apply -f manifests.yaml
+        kubectl create namespace casestudy
+        kubectl -n casestudy apply -f manifest.yaml
